Added rating and genre to wireframe

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <div id="container">
             <book id="aaa-aa-aaaa">
                 <h3>Book1</h3>
+                <span>Rating: 5 / 5</span><br />
+                <span>Genre: Science Fiction</span>
                 <p>Book1 is a book about stuff.</p>
                 <div id="controls">
                     <a href="edit-book.html"><button id="edit">Edit</button></a>
@@ -26,6 +28,8 @@
             </book>
             <book id="aaa-aa-aaab">
                 <h3>Book2</h3>
+                <span>Rating: 3 / 5</span><br />
+                <span>Genre: Science Fiction</span>
                 <p>Book2 is a book about other stuff.</p>
                 <div id="controls">
                     <a href="edit-book.html"><button id="edit">Edit</button></a>
