Added requested revisions

--- a/index.html
+++ b/index.html
@@ -3,65 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Library</title>
+    <title>Log in to my library</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="#">all books</a></li>
-            <li><a href="#">random book</a></li>
-        </ul>
-    </nav>
-    <section class="main">
-        <div id="controls">
-            <label for="add">Add a Book</label>
-            <a href="add-book.html"><button id="add">+</button></a>
-            <label for="rating">Sort by rating</label>
-            <select id="rating">
-                <option selected>All</option>
-                <option>1 and up</option>
-                <option>2 and up</option>
-                <option>3 and up</option>
-                <option>4 and up</option>
-                <option>5</option>
-            </select>
-            <label for="genre">Sort by Genre</label>
-            <select id="genre">
-                <option selected>All</option>
-                <option>Young Adult</option>
-                <option>Fantasy</option>
-                <option>Children's</option>
-                <option>Literary Fiction</option>
-                <option>Science Fiction</option>
-                <option>Thriller/Suspense</option>
-                <option>Middle Grade</option>
-                <option>Romance</option>
-                <option>Picture Book</option>
-                <option>Historical Fiction</option>
-                <option>Horror</option>
-            </select>
-            <button id="alpha">Alphabetize</button>
-        </div>
-        <div id="container">
-            <book id="aaa-aa-aaaa">
-                <h3>Book1</h3>
-                <span>Rating: 5 / 5</span><br />
-                <span>Genre: Science Fiction</span>
-                <p>Book1 is a book about stuff.</p>
-                <div id="controls">
-                    <a href="edit-book.html"><button id="edit">Edit</button></a>
-                </div>
-            </book>
-            <book id="aaa-aa-aaab">
-                <h3>Book2</h3>
-                <span>Rating: 3 / 5</span><br />
-                <span>Genre: Science Fiction</span>
-                <p>Book2 is a book about other stuff.</p>
-                <div id="controls">
-                    <a href="edit-book.html"><button id="edit">Edit</button></a>
-                </div>
-            </book>
-        </div>
-    </section>
+    <form action="list.html">
+        <h1>Login</h1>
+        <label for="username">Username: </label>
+        <input id="username" type="text" name="username" />
+        <label for="password">Password: </label>
+        <input id="password" type="text" name="password" />
+        <button type="submit">Log In</button>
+    </form>
+    <br />
+    <form action="register-complete.html">
+        <h1>Register</h1>
+        <label for="username">Username: </label>
+        <input id="username" type="text" name="username" />
+        <label for="password">Password: </label>
+        <input id="password" type="text" name="password" />
+        <button type="submit">Register</button>
+    </form>
 </body>
 </html>
