--- a/add-book.html
+++ b/add-book.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Add a new Book to your library</h1>
     <a href="index.html"><button>Back</button></a>
-    <form>
+    <form action="list.html">
         <div class="form-group">
             <label for="title">Title: </label>
             <input type="text" id="title" name="title" />
@@ -36,6 +36,9 @@
         <div class="form-group">
             <label for="description">Description: </label>
             <textarea id="description"></textarea>
+        </div>
+        <div class="form-group">
+            <button type="submit">Submit</button>
         </div>
     </form>
 </body>
